--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "@napi-rs/canvas": "^0.1.53",
     "colorjs.io": "^0.5.2",
     "discord.js": "^14.15.3",
+    "markdown-to-text": "^0.1.1",
     "mitata": "^0.1.11",
-    "skia-canvas": "^1.0.1"
+    "skia-canvas": "^1.0.1",
+    "strip-markdown": "^6.0.0"
   }
 }
