--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "typescript": "^5.0.0"
   },
   "dependencies": {
+    "@khanacademy/simple-markdown": "^0.13.0",
     "@napi-rs/canvas": "^0.1.53",
+    "@types/jsdom": "^21.1.7",
     "colorjs.io": "^0.5.2",
     "discord.js": "^14.15.3",
+    "jsdom": "^24.1.1",
     "markdown-to-text": "^0.1.1",
     "mitata": "^0.1.11",
     "skia-canvas": "^1.0.1",
