--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,13 +1,16 @@
 [phases.setup]
-nixPkgs = ['nodejs', 'unzip', 'curl']
+nixPkgs = ['curl', 'unzip', 'git']
+aptPkgs = ['build-essential']
 
 [phases.install]
 cmds = [
   'curl -fsSL https://bun.sh/install | bash',
-  'export BUN_INSTALL="$HOME/.bun"',
-  'export PATH="$BUN_INSTALL/bin:$PATH"',
+  'echo "export BUN_INSTALL=$HOME/.bun" >> $HOME/.bashrc',
+  'echo "export PATH=$BUN_INSTALL/bin:$PATH" >> $HOME/.bashrc',
+  'export BUN_INSTALL=$HOME/.bun',
+  'export PATH=$BUN_INSTALL/bin:$PATH',
   'bun install'
 ]
 
 [start]
-cmd = 'export BUN_INSTALL="$HOME/.bun" && export PATH="$BUN_INSTALL/bin:$PATH" && bun run index.ts'
+cmd = 'export BUN_INSTALL=$HOME/.bun && export PATH=$BUN_INSTALL/bin:$PATH && bun run index.ts'
