--- a/package.json
+++ b/package.json
@@ -1,24 +1,27 @@
 {
   "name": "quotebot",
-  "version": "1.0.0",
+  "module": "index.ts",
   "type": "module",
   "scripts": {
-    "build": "tsc",
-    "start": "node dist/index.js"
+    "start": "bun run index.ts"
+  },
+  "devDependencies": {
+    "@types/bun": "latest"
+  },
+  "peerDependencies": {
+    "typescript": "^5.0.0"
   },
   "dependencies": {
     "@khanacademy/simple-markdown": "^0.13.0",
-    "canvas": "^2.11.2",
+    "@napi-rs/canvas": "^0.1.53",
+    "@types/jsdom": "^21.1.7",
     "colorjs.io": "^0.5.2",
     "discord.js": "^14.15.3",
     "jsdom": "^24.1.1",
     "markdown-to-text": "^0.1.1",
     "mitata": "^0.1.11",
+    "skia-canvas": "^1.0.1",
     "strip-markdown": "^6.0.0"
   },
-  "devDependencies": {
-    "typescript": "^5.0.0",
-    "@types/node": "^18.16.0",
-    "@types/jsdom": "^21.1.7"
-  }
+  "trustedDependencies": ["skia-canvas"]
 }
